Minor bug fixes, mostly involving stupid z-indexing

--- a/style.less
+++ b/style.less
@@ -31,6 +31,7 @@ button:hover {
 }
 
 .navbar {
+	z-index: 100;
 	background-color: rgba(255,255,255,0.8);
 	position: fixed;
 	top: 0;
@@ -156,7 +157,7 @@ button:hover {
 			}
 
 			.text {
-				background-color: rgba(0,0,0,0.7);
+				background-color: rgba(0,0,0,0.75);
 				color: white;
 				height: 285px;
 				padding: 20px;
@@ -165,7 +166,8 @@ button:hover {
 			  	-moz-transition: opacity 0.5s;
 			  	transition: opacity 0.5s;
 			  	z-index: -1;
-			  	font-family: 'Josefin Sans', sans-serif;
+			  	font-family: 'Raleway', sans-serif;
+			  	font-weight: 300;
 
 				h3 {
 					margin-top: 0;
@@ -174,10 +176,6 @@ button:hover {
 					font-weight: normal;
 					border-bottom: 1px solid white;
 					padding-bottom: 10px;
-				}
-
-				p {
-					font-weight: bold;
 				}
 			}
 		}
@@ -191,46 +189,46 @@ button:hover {
 }
 
 #activities-container {
-	position: relative !important;
+	#activities-wookmark {
+		position: relative !important;
+		.activity {
+			font-family: 'Raleway', sans-serif;
+			font-size: 12px;
+			text-decoration: none !important;
+			position: absolute;
 
-	.activity {
-		font-family: 'Josefin Sans', sans-serif;
-		font-size: 12px;
-		text-decoration: none !important;
-		position: absolute;
+			.thumbnail {
+				margin: 20px 1%;
+				width: 282px;
+				z-index: 1;
+				padding: 4px 15px;
+				line-height: 1.428571429;
+				background-color: #ffffff;
+				border: 1px solid #dddddd;
+				border-radius: 4px;
+				-webkit-transition: all 0.2s ease-in-out;
+				transition: all 0.2s ease-in-out;
+				color: black !important;
 
-		.thumbnail {
-			margin: 20px 1%;
-			min-width: 250px;
-			width: 22%;
-			z-index: -1;
-			padding: 4px 15px;
-			line-height: 1.428571429;
-			background-color: #ffffff;
-			border: 1px solid #dddddd;
-			border-radius: 4px;
-			-webkit-transition: all 0.2s ease-in-out;
-			transition: all 0.2s ease-in-out;
-			color: black !important;
+				.caption {
+					font-family: "Quicksand";
 
-			.caption {
-				font-family: "Quicksand";
+					h3 {
+						font-family: 'Montserrat', Gotham, 'Proxima Nova', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Arial, sans-serif !important;
+						font-weight: normal;
+						font-size: 16px;
+					}
 
-				h3 {
-					font-family: 'Montserrat', Gotham, 'Proxima Nova', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Arial, sans-serif !important;
-					font-weight: normal;
-					font-size: 16px;
-				}
-
-				span {
-					color: #7DC3CE;
-					font-weight: bold;
+					span {
+						color: #7DC3CE;
+						font-weight: bold;
+					}
 				}
 			}
-		}
 
-		.link:hover {
-		    box-shadow: 0px 0px 0px 2px #7DC3CE;
+			.thumbnail.link:hover  {
+			    box-shadow: 0px 0px 0px 2px #7DC3CE;
+			}
 		}
 	}
 }
@@ -296,6 +294,7 @@ button:hover {
 		max-width: 500px;
 		float: left;
 		text-align: right;
+		font-family: 'Raleway', sans-serif;
 	}
 	#sounds-wookmark {
 		width: 65%;
@@ -413,7 +412,8 @@ button:hover {
 							float: left;
 							margin-top: 22px;
 							margin-left: 10px;
-							font-family: 'Josefin Sans', sans-serif !important;
+							font-family: 'Raleway', sans-serif;
+							font-weight: 300;
 						}
 					}
 				}
@@ -478,19 +478,20 @@ button:hover {
 					border-bottom: 0px solid rgb(220,220,220);
 					float: left;
 					margin-top: 0 !important;
-					line-height: 1.4;
+					line-height: 37px;
 					margin-left: 20px;
+					padding-bottom: 0;
 				}
 				p {
 					vertical-align: bottom;
 					margin: 0 20px;
 					float: left;
-					line-height: 2;
+					line-height: 37px;
 				}
 				span {
 					vertical-align: bottom;
 					float: left;
-					line-height: 2;
+					line-height: 37px;
 				}
 
 				a {
